# klword

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: demo_generate.py
src/klword/: __init__.py  word_api.py  word_styles.py
src/klword/templates/: README.txt  default_template.docx
tests/: test_smoke.py
