[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klword"
version = "0.1.0"
description = "Word report generation library based on python-docx"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Craig Cooper", email = "2322806855@qq.com" }
]
keywords = ["word", "docx", "report", "python-docx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "python-docx>=1.1.0",
  "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "twine>=5.1.0"
]

[project.urls]
Homepage = "https://github.com/poggiotzx/klword"
Repository = "https://github.com/poggiotzx/klword"
Issues = "https://github.com/poggiotzx/klword/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
klword = [
  "py.typed",
  "templates/*.docx",
  "templates/*.png",
  "templates/*.jpg",
  "templates/*.jpeg",
  "templates/*.bmp",
  "templates/*.gif",
  "templates/*.webp",
  "templates/*.tif",
  "templates/*.tiff",
  "templates/*.txt"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
