[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klword"
version = "0.1.2"
description = "Lightweight Word report generation library based on python-docx"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Craig Cooper", email = "2322806855@qq.com" }
]
keywords = ["word", "docx", "report", "automation", "python-docx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "python-docx>=1.1.0",
  "Pillow>=10.0.0",
  "docxtpl>=0.20.2",
  "docxcompose>=1.4.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
  "python-semantic-release>=9.15.0"
]

[project.urls]
Homepage = "https://github.com/poggiotzx/klword"
Repository = "https://github.com/poggiotzx/klword"
Issues = "https://github.com/poggiotzx/klword/issues"
Changelog = "https://github.com/poggiotzx/klword/blob/master/CHANGELOG.md"
Documentation = "https://github.com/poggiotzx/klword/blob/master/README.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
klword = [
  "py.typed",
  "templates/*.docx",
  "templates/*.png",
  "templates/*.jpg",
  "templates/*.jpeg",
  "templates/*.bmp",
  "templates/*.gif",
  "templates/*.webp",
  "templates/*.tif",
  "templates/*.tiff",
  "templates/*.txt"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.coverage.run]
source = ["src/klword"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.semantic_release]
branch = "master"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/klword/__init__.py:__version__"]
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
commit_parser = "conventional"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.remote]
name = "origin"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]